--- a/src/components/articles/Article.css
+++ b/src/components/articles/Article.css
@@ -1,6 +1,8 @@
 .Article {
-    border: 5px solid black;
+    border: 4px solid black;
+    border-radius: 15px;
     margin: 5px;
+    margin-bottom: 15px;
     padding: 5px;
 }
 
@@ -8,7 +10,7 @@
     overflow-x: auto;
 }
 
-.Article-undistract {
+.Article-below-title {
     color: gray;
     font-size: 8pt;
     margin: 0;
@@ -26,4 +28,11 @@
     margin: 10px;
     border: 3px solid;
     background-color: white;
+}
+
+.Article-added {
+}
+
+.Article-id {
+    float: right;
 }
