--- a/src/components/articles/Article.css
+++ b/src/components/articles/Article.css
@@ -1,7 +1,14 @@
+.Articles-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .Article {
     border: 4px solid black;
     border-radius: 15px;
     margin: 5px;
+    margin-left: 0;
+    margin-right: 0;
     margin-bottom: 15px;
     padding: 5px;
 }
@@ -20,14 +27,11 @@
     margin: 7px;
 }
 
-.Article-status-btn {
-    font-weight: bold;
-    font-size: 13pt;
-    padding: 5px;
-    border-radius: 3px;
-    margin: 10px;
-    border: 3px solid;
-    background-color: white;
+.Article-status-btns {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .Article-added {
